UpdateV4 index.html

--- a/index.html
+++ b/index.html
@@ -1541,7 +1541,7 @@
         </div>
         <div class="md:w-1/2 flex justify-center">
             <div class="w-80 h-80 flex items-center justify-center">
-                <img src="18.jpg" alt="โปรโมชั่น 3" class="w-full object-cover rounded-lg">
+                <img src="https://ik.imagekit.io/zvfisr4jf/18.jpg?updatedAt=1754274737375" alt="โปรโมชั่น 3" class="w-full object-cover rounded-lg">
             </div>
         </div>
     </section>
@@ -2006,5 +2006,6 @@
 </body>
 
 </html>
+
 
 
