--- a/index.html
+++ b/index.html
@@ -1841,7 +1841,7 @@
             <p>อีเมล: <a href="mailto:ponchai.paramee@gmail.com" class="text-accent hover:underline">ponchai.paramee@gmail.com</a></p>
             <p>ที่อยู่: 8 หมู่ 12 ตำบลภูหอ อำเภอภูหลวง จังหวัดเลย 42230</p>
             <p>Facebook: <a href="https://www.facebook.com/ponchai.kamb" target="_blank" class="text-accent hover:underline">ponchai kamb</a></p>
-            <p>GitHub: <a href="https://github.com/pornchai123" target="_blank" class="text-accent hover:underline">https://github.com/pornchai123</a></p>
+            <p>GitHub: <a href="https://github.com/pornchai123" target="_blank" class="text-accent hover:underline">https://github.com/ponchai2001</a></p>
         </div>
     </section>
 </main>
@@ -2006,6 +2006,7 @@
 </body>
 
 </html>
+
 
 
 
